# minimalib

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  as_constant.hpp  assert.hpp  cat.hpp  cat_quick_bench.cpp  compile_time_minimalib_use_syscalls.hpp  compile_time_ndebug.hpp  ef.hpp  enable_syscalls.hpp  err.hpp  fd.hpp  fmtsize.hpp  format  later.hpp  len.hpp  lenfmt.hpp  macro_assume.hpp  macro_concat.hpp  macro_count.hpp  macro_if.hpp  macro_later.hpp  macro_pretty_function.hpp  macro_strict.hpp  macro_stringify.hpp  macro_unique.hpp  mcpy.hpp  nanos.hpp  ndebug.hpp  offset.hpp  start.hpp  stdstreams.hpp  str.hpp  sys_close.hpp  sys_exit.hpp  sys_fstat.hpp  (+14 more)
.github/workflows/: clang-format.yml  cmake-check.yml  code-format-style.yml  code-static-analysis.yml  code-yaml-lint.yml  ctest-linux.yml  ctest-macos.yml  ctest-unix.yml  ctest-windows.yml  linux-clang.yml  linux-gcc.yml  macos-clang.yml  macos-gcc.yml  tests.yml  windows-clang.yml
.scripts/: format
.tests/: CMakeLists.txt  alg_uitos10.cpp  entrypoint_start.cpp  syscall_exit.cpp  syscall_open.cpp  syscall_write.cpp
alg/: mcpy.hpp
alg/string/: itos10.hpp  seq.hpp  streq.hpp  uitos10.hpp
entrypoint/: start.hpp  start.s
macro/: asm.hpp  assume.hpp  concat.hpp  later.hpp  str.hpp  strict.hpp  unique.hpp
syscall/: README-macos.md  README.md  close.hpp  ewrite.hpp  exit.hpp  fstat.hpp  lseek.hpp  lstat.hpp  mmap.hpp  open.hpp  poll.hpp  read.hpp  stat.hpp  write.hpp
test/: test.hpp
tests/: start.cpp  str.cpp  sys_exit.cpp  sys_write.cpp
